Modify: Corrected layout issues

--- a/frontend/src/pages/FormBot/formbot.module.css
+++ b/frontend/src/pages/FormBot/formbot.module.css
@@ -2,9 +2,9 @@
 .container {
   display: flex;
   flex-direction: column;
-  height: 100vh;
   width: 100%;
   background-color: #ffffff;
+  position: relative;
 }
 
 .chatDisplay {
@@ -63,6 +63,9 @@
   font-size: 1.5rem;
   background-color: #ffffff;
   box-shadow: 0px 4px 6.3px 0px #00000040;
+  position: absolute;
+  bottom:20px;
+  right: 80px;
 }
 
 .ratingBox {
@@ -108,8 +111,14 @@
   display: flex;
   align-items: center;
   justify-content: center;
+ 
 }
 
+.submitButton {
+  position: absolute;
+  bottom: 18px;
+  right: 20px;
+}
 .submitButton:hover,
 .confirmButton:hover {
   transform: scale(1.1);
@@ -183,4 +192,10 @@
 }
 .datePickerContainer .confirmButton:hover {
   background-color: #0056b3;
+}
+
+@media screen and (max-width: 400px) {
+  .textInputSection input {
+    width: 70%;
+  }
 }
